# devsecops_platform_stack

./: .checkov.yaml  .gitignore  .pre-commit-config.yaml  .yamllint.yml  Makefile  README.md
.devcontainer/: devcontainer.json
.github/workflows/: build-sign-scan.yml  gitops-validate.yml  security-sbom.yml  validate.yml
ansible/: inventory.ini  playbook.yml
ansible/group_vars/: all.yml
docker/: .env.example  Dockerfile  compose.local.yml  compose.remote.yml
docs/: architecture.md  deployment-debian.md  deployment-rhel.md  factory-development-stack.md  getting-started-mac.md  gitops.md  python.md  security-model.md
examples/python-app/: pyproject.toml
examples/python-app/tests/: test_main.py
k8s/apps/sample-app/: deployment.yaml  kustomization.yaml  networkpolicy.yaml  service.yaml
k8s/platform/argocd/: kustomization.yaml  root-application.yaml
k8s/platform/argocd/apps/: platform-external-secrets.yaml  platform-observability.yaml
k8s/platform/external-secrets/: external-secret.yaml  kustomization.yaml  secretstore.yaml
k8s/sample-app/: deployment.yaml  networkpolicy.yaml
policies/kubernetes/: deny-latest-tag.rego
scripts/: check-git-ssh-signing.sh  configure-git-ssh-signing.sh
templates/factory-development/: .gitsigners.example
templates/factory-development/.devcontainer/: devcontainer.json
terraform/environments/dev/: main.tf  variables.tf
terraform/environments/prod/: main.tf  outputs.tf
terraform/modules/kubernetes-cluster/: main.tf
terraform/modules/network/: main.tf
terraform/modules/object-storage/: main.tf
